[gd_scene load_steps=5 format=3 uid="uid://dwl1u5xa8yaj3"]

[ext_resource type="Script" path="res://src/enemies/mud_mummy/mud_mummy.gd" id="1_ri1ep"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4h4jj"]
radius = 25.0
height = 70.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bl10x"]
size = Vector2(70, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_mbqbr"]
animations = [{
"frames": [],
"loop": true,
"name": &"charge",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"combat",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"combat_movement",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle_movement",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"wrap_around_player",
"speed": 5.0
}]

[node name="MudMummy" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_ri1ep")

[node name="Timers" type="Node" parent="."]

[node name="ResetHPTimer" type="Timer" parent="Timers"]
wait_time = 10.0

[node name="ChargeTimer" type="Timer" parent="Timers"]

[node name="WrapTimer" type="Timer" parent="Timers"]
wait_time = 3.0

[node name="NormalCollision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4h4jj")

[node name="Hurtbox" type="Area2D" parent="." groups=["enemy"]]
position = Vector2(-35, -25)
collision_layer = 6
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(35, 25)
shape = SubResource("RectangleShape2D_bl10x")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -35.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = 25.0
color = Color(1, 0, 0, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-35, -25)
sprite_frames = SubResource("SpriteFrames_mbqbr")
animation = &"charge"
autoplay = "idle"

[connection signal="timeout" from="Timers/ResetHPTimer" to="." method="_on_reset_hp_timer_timeout"]
[connection signal="timeout" from="Timers/ChargeTimer" to="." method="_on_charge_timer_timeout"]
[connection signal="timeout" from="Timers/WrapTimer" to="." method="_on_wrap_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_hurtbox_area_exited"]
